--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PmsDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDBContext": "Server=(mssqllocaldb)\\mssqllocaldb;Database=PmsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
